# dataformats-nq

./: CMakeLists.txt
cmake/: dataformats-nqConfig.cmake.in
plugins/: FragmentNQ.cpp
